Added javadoc. Updated examples coherently with change of default for add(..., boolean hierarchical); added examples/content/sfo/*
git-svn-id: https://jade.tilab.com/svn/jade_add-ons/trunk@1563 815794fe-97f2-0310-9206-e62f04a60ddc